--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #  Your basic info
 # ---------------------------------------------------------------------------------------
 base_info:
-  title: Dazzlingo OKami
+  title: Dazzling OKami
   author: DazzlingOkami
   url: https://dazzlingokami.github.io/
 
